[package]
name = "avr-hal-generic"
version = "0.1.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"

[dependencies]
cfg-if = "1.0.0"
nb = "1.1.0"
ufmt = { version = "0.2", git =  "https://github.com/michaelkamprath/ufmt.git", branch = "floating_point", features = ["f32"] }
paste = "1.0.0"
avr-device = "0.5.1"
embedded-storage = "0.2"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.void]
version = "1.0.2"
default-features = false

[build-dependencies]
rustversion = "1.0"
